--- a/BookBee/src/main/resources/templates/livros/index.html
+++ b/BookBee/src/main/resources/templates/livros/index.html
@@ -13,10 +13,70 @@
     <title>Inicial</title>
 </head>
 <body>
-    <div class="containerlogo">
-        <div class="logofixamain">
-            <img src="/img/logo.png" alt="logo">
+    
+    <div class="gambiarra">
+        <div class="containerlogo">
+            <div class="logofixamain">
+                <img src="/img/logo.png" alt="logo">
+            </div>
         </div>
+        
+        <button class="button-mobile" onclick="toggleMenu()">
+            <i class="material-symbols"> <img src="/img/menu.png" alt=""> </i>
+        </button>
+
+        <nav class="menu-mobile" id="menu-mobile">
+            <button onclick="toggleMenu()">
+                <span>
+                    <i class="material-symbols"> X </i>
+                </span>
+            </button>
+    
+            <button >
+                <span>
+                    <a href="/livros/">
+                        <img src="/img/Home.png" alt="home">
+                    </a>
+                    <span class="nomes-mobile"><a href="/livros/">Home</a></span>
+                </span>
+            </button>
+    
+            <button>
+                <span>
+                    <a href="/livros/meta-de-leitura">
+                        <img src="/img/Goal.png" alt="meta">
+                    </a>
+                    <span class="nomes-mobile"><a href="/livros/meta-de-leitura">Metas</a></span>
+                </span>
+            </button>
+    
+            <button>
+                <span>
+                    <a href="/livros/livros-favoritos">
+                        <img src="/img/Favorites.png" alt="Favoritos">
+                    </a>
+                    <span class="nomes-mobile"><a href="/livros/livros-favoritos">Favoritos</a></span>
+                </span>
+            </button>
+    
+            <button>
+                <span>
+                    <a href="/notas/">
+                        <img src="/img/Quote.png" alt="Citações">
+                    </a>
+                    <span class="nomes-mobile"><a href="/notas/">Anotações</a></span>
+                </span>
+            </button>
+    
+            <button>
+                <span>
+                <a href="/logout">
+                    <img src="/img/Exit.png" alt="Sair">
+                </a>
+                    <span class="nomes-mobile"><a href="/logout">Sair</a></span>
+                </span>
+            </button>
+        </nav>
     </div>
 
     <aside class="sidebar">
@@ -76,12 +136,8 @@
         </nav>
     </aside>
 
-    <button class="button-mobile" onclick="toggleMenu()">
-        <i class="material-symbols"> menu </i>
-        <span>Menu</span>
-    </button>
 
-    <nav class="menu-mobile" id="menu-mobile">
+    <!-- <nav class="menu-mobile" id="menu-mobile">
         <button onclick="toggleMenu()">
             <span>
                 <i class="material-symbols"> X </i>
@@ -132,7 +188,7 @@
                 <span class="nomes-mobile"><a href="/logout">Sair</a></span>
             </span>
         </button>
-    </nav>
+    </nav> -->
     
 
 
