--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -1602,7 +1602,6 @@ label{ cursor: pointer;}
     height: 10px;
     flex-shrink: 0;
     border-radius: 5px;
-    background: #878C69;
     box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
     margin-left: 19%;
     margin-top: 80px;
@@ -3662,6 +3661,11 @@ h3 {
     .botaocadastro1 {
         padding-left: 856px;
     }
+
+    .main {
+        width: 258%;
+        margin-left: -29%;
+    }
 }
 
 @media only screen and (max-width: 450px){
@@ -3805,12 +3809,13 @@ h3 {
     }
 
     .detalhePosicao ul li {
-        margin: 0 45px;
+        margin: 0px 2px;
     }
 
-    .detalhePosicao ul li:first-child{
-        margin: 0px 45px 0 30px;
+    .detalhePosicao ul li:first-child {
+        margin: 0px 51px 0 30px;
     }
+
     .detalhePosicao ul li:last-child{
         margin: 0px 30px 0 45px;
     }
@@ -3837,6 +3842,675 @@ h3 {
         margin-left: -77%;
     }
 
+    .main {
+        width: 273%;
+        margin-left: -29%;
+    }
+
+    .tituloAutorResumo h2 {
+        width: 198px;
+        color: #301212;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        font-size: 21px;
+        margin-top: 12px;
+    }
+
+    .descricaoLivroP {
+        display: none;
+    }
+
+    .container-detalhes {
+        width: 310px;
+        height: 207px;
+        margin-left: -19px;
+    }
+
+    .container-detalhes img {
+        width: 149px;
+        height: auto;
+        margin-top: -8px;
+        border-radius: 5px;
+    }
+
+    .barradepes input {
+        border: 0;
+        width: 332px;
+        height: 50px;
+        flex-shrink: 0;
+        border-radius: 15px;
+        background: #FCFCFC;
+        box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.25);
+        padding-left: 20px;
+        outline: none;
+    }
+
+    .titulo-lidos-recentes p {
+        font-size: 40px;
+    }
+
+    .modal {
+        flex-direction: column;
+        margin-left: -22px;
+    }
+
+    .list {
+        margin-left: -4%;
+    }
+
+    .botao-adc {
+        margin-top: 30px;
+        margin-left: 84px;
+    }
+
+    .detalhePosicao {
+        margin-left: -21px;
+        width: 313px;
+    }
+
+}
+
+@media only screen and (max-width: 420px){
+    .modal-content-notas {
+        position: relative;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        background-color: #A7886C;
+        margin-left: 10%;
+    }
+    
+    .modal-content-notas {
+        width: 66%;
+        height: 34%;
+        border-radius: 15px;
+    }
+    
+    .modal-capa-notas {
+        width: 30%;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+    }
+    
+    .modal-notas h3 {
+        width: 156px;
+        background-color: #FFFBEB;
+        padding: 0.9rem;
+        border-radius: 3px;
+        font-size: 15px;
+        color: #301212;
+    }
+    
+    .modal-notas textarea {
+        width: 77px;
+        height: 58px;
+        padding: 10px;
+        border-radius: 3px;
+        resize: none;
+        border: 0;
+        outline: none;
+        background-color: #FFFBEB;
+    }
+    
+    .nota {
+        background-color: #FFFBEB;
+        padding: 5px;
+        margin: 5px 5px;
+        width: 77px;
+        height: 58px;
+        border-radius: 3px;
+        display: inline-block;
+        text-align: center;
+    }
+    
+    .botao-salva {
+        position: absolute;
+        width: 92px;
+        height: 33px;
+        left: 15px;
+        top: 191px;
+        font-size: 13px;
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.50);
+        border-radius: 5px;
+        color: #301212;
+        cursor: pointer;
+    }
+    
+    .conteudo h5, p {
+        font-size: 13px;
+    }
+
+    .modal-capa-notas img {
+        width: 106px;
+        margin-bottom: 25px;
+    }
+
+    .modal-content {
+        margin-left: 10%;
+        position: relative;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        background-color: #A7886C;
+    }
+
+    .modal-capa {
+        width: 30%;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+    }
+
+    .modal-capa img {
+        width: 106px;
+    }
+
+    .modal-resenha textarea {
+        width: 92%;
+        height: 197px;
+        padding: 10px;
+        border-radius: 5px;
+        resize: none;
+        border: 0;
+        outline: none;
+        font-size: 15px;
+        background-color: #FFFBEB;
+    }
+
+    .modal-exibirClassificacao {
+        color: #301212;
+        width: 110px;
+        height: 50px;
+        margin-top: -20px;
+    }
+
+    .modal-resenha h3 {
+        width: 168px;
+        background-color: #FFFBEB;
+        padding: 0.9rem;
+        border-radius: 5px;
+        font-size: 15px;
+        color: #301212;
+    }
+
+    .modal-content {
+        width: 70%;
+        height: 32%;
+        border-radius: 5px;
+    }
+
+    .modal-content button {
+        position: absolute;
+        width: 100px;
+        height: 38px;
+        left: 18px;
+        top: 231px;
+        font-size: 15px;
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.50);
+        border-radius: 5px;
+        color: #301212;
+        cursor: pointer;
+    }
+
+    .modal-content-list {
+        position: relative;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 65%;
+        height: 30%;
+        background-color: #A7886C;
+        margin-top: 50%;
+        margin-left: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .modal-content-list h2 {
+        width: 100%;
+        height: 40px;
+        border-radius: 3px;
+        background-color: #FFFBEB;
+        color: #301212;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: center;
+        justify-content: center;
+        padding-top: 10px;
+        margin-bottom: -10px;
+    }
+
+    .modal-content-list input {
+        width: 155px;
+        height: 45.539px;
+        flex-shrink: 0;
+        border-radius: 3px;
+        background: #FFFBEB;
+        border: none;
+        outline: none;
+        padding-left: 20px;
+    }
+
+    .bnt-criaLista {
+        width: 93px;
+        height: 50.273px;
+        border-radius: 5px;
+        border: 1px solid rgba(0, 0, 0, 0.50);
+        background: #FFFBEB;
+        margin-top: 20px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .modal-content-list h3 {
+        width: 80%;
+        height: 40px;
+        border-radius: 3px;
+        background-color: #FFFBEB;
+        color: #301212;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: center;
+        padding-top: 10px;
+    }
+
+    .botao-lista p {
+        color: 301212;
+        margin-top: 15px;
+        font-size: 22px;
+        width: 190px;
+    }
+
+    .botao-lista p {
+        color: 301212;
+        margin-top: 15px;
+        font-size: 22px;
+        width: 190px;
+        /* margin-left: -10%; */
+    }
+
+    .usuario {
+        display: flex;
+        align-items: center;
+        margin-top: 40px;
+        color: rgba(0, 0, 0, 0.60);
+        margin-left: 144px;
+    }
+
+    .barradepes {
+        width: 420px;
+        margin-left: 138px;
+        margin-top: 35px;
+    }
+
+    .estilizacaoLidos {
+        color: #412E27;
+        display: flex;
+        width: 1077px;
+        list-style: none;
+        padding: 0;
+        margin-left: 128px;
+        margin-top: 10px;
+    }
+    
+    .container-lidos-recentes {
+        margin-left: 137px;
+        margin-top: 70px;
+    }
+    
+    
+    .titulo-lidos-recentes p {
+        font-size: 33px;
+    }
+    
+    .titulo-lidos-recentes a {
+        margin-right: 64%;
+        font-size: 22px;
+        margin-top: -7%;
+    }
+    
+    .titulo-lidos-recentes img {
+        margin-right: 63%;
+        margin-top: -65px;
+    }
+
+    .estilizacaoLidos li a {
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+        width: 128px;
+        height: 195px;
+        margin: 7px;
+        cursor: pointer;
+    }
+
+    .container-metas {
+        margin-left: 135px;
+        margin-top: 70px;
+        text-shadow: 5px 6px 10px rgba(0, 0, 0, 0.4);
+    }
+
+    .titulo-metas p {
+        font-size: 33px;
+    }
+
+    .titulo-metas a {
+        margin-right: 64%;
+        font-size: 22px;
+        margin-top: -7%;
+    }
+
+    .titulo-metas img {
+        margin-right: 62%;
+        margin-top: -65px;
+    }
+
+    .container-carrossel {
+        width: 140%;
+        position: relative;
+        padding: 15px;
+        max-width: 27%;
+        margin-left: 156px;
+    }
+
+    .arrow-left {
+        position: absolute;
+        margin-top: 52px;
+        margin-left: -70px;
+    }
+
+    .arrow-rigth {
+        position: absolute;
+        margin-top: 52px;
+        margin-left: 291px;
+    }
+
+    .gallery img {
+        width: 120px;
+        height: 181px;
+        padding: 3px;
+        border-radius: 5px;
+    }
+
+    .container-favoritos {
+        margin-left: 143px;
+        margin-top: 70px;
+        text-shadow: 5px 6px 10px rgba(0, 0, 0, 0.4);
+    }
+
+    .titulo-favoritos p {
+        font-size: 33px;
+    }
+
+    .titulo-favoritos a {
+        margin-right: 65%;
+        font-size: 22px;
+        margin-top: -8%;
+    }
+
+    .titulo-favoritos img {
+        margin-right: 66%;
+        margin-top: -65%;
+    }
+
+
+    .carousel-container {
+        position: relative;
+        padding: 15px;
+        max-width: 600px;
+        margin-left: 134px;
+    }
+
+
+    .carousel-gallery img {
+        width: 120px;
+        height: 181px;
+        padding: 0px;
+        border-radius: 5px;
+    }
+
+    .container-citacao {
+        margin-left: 148px;
+    }
+
+    .titulo-citacao p {
+        font-size: 33px;
+    }
+
+    .titulo-citacao a {
+        margin-right: 65%;
+        font-size: 22px;
+        margin-top: -7%;
+    }
+
+    .meu-carrossel-container {
+        max-width: 333px;
+        margin-left: 163px;
+    }
+
+    .conteudo {
+        display: flex;
+        width: 182px;
+        height: 170px;
+        flex-direction: column;
+        margin-left: 110px;
+        margin-top: -170px;
+    }
+
+    .meu-carousel-arrow-direita {
+        position: absolute;
+        margin-top: 40px;
+        margin-left: 79%;
+    }
+
+    .caixa-notas {
+        width: 296px;
+        height: 155px;
+        flex-shrink: 0;
+        border-radius: 5px;
+        background: #878C69;
+        box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .caixa-notas img {
+        width: 111px;
+        height: 167px;
+    }
+
+    .container-caixas {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        margin-left: 7%;
+        max-width: 10%;
+        margin-top: -4%;
+    }
+
+    .menu-mobile-active {
+        width: 102vw;
+        height: 103vh;
+    }
+
+    .nomes-mobile a {
+        color: #412E27;
+        font-size: 35px;
+    }
+
+    .menu-mobile-active button img {
+        height: 60px;
+        margin-right: 12px;
+    }
+
+
+    .container-perfil h3 {
+        width: 113px;
+        color: #412E27;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-top: 10px;
+    }
+    
+
+    .container-perfil{
+        margin-left: -102%;
+    }
+
+    .container-caixotes {
+        display: flex;
+        margin-left: -42%;
+    }
+
+    .concluidos, .pag-lidas, .met-lei {
+        width: 92px;
+        height: 71px;
+        flex-shrink: 0;
+        border-radius: 10px;
+        border: 1px solid rgba(0, 0, 0, 0.50);
+        padding: 10px;
+        margin: 5px;
+    }
+
+    .container-caixotes h5 {
+        width: 94px;
+        height: 0px;
+        color: #412E27;
+        text-align: center;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        margin-top: 8px;
+    }
+
+    .container-caixotes p {
+        width: 92px;
+        color: #412E27;
+        text-align: center;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    .botaologin1 {
+        width: 75%;
+    }
+
+    .containerlogo {
+        margin-right: 7%;
+    }
+
+    .logofixa {
+        margin-left: 0%;
+    }
+
+    .formlogin i {
+        top: -38px;
+        margin-left: 76%;
+    }
+
+    .containerlogocas {
+        float: right;
+        margin-right: 3%;
+    }
+
+    .logofixacas {
+        margin-left: 0%;
+        margin-top: -74%;
+    }
+
+
+    .titulo {
+        margin-left: 21%;
+    }
+
+    .text-mobile {
+        display: block;
+        margin-left: 123px;
+        width: 370px;
+        font-size: 18px;
+        margin-top: -8%;
+    }
+
+    .botoes {
+        padding-left: 129px;
+    }
+
+    .botaologin a button {
+        width: 150px;
+        margin-right: 14px;
+    }
+
+    .botaocadastro a button {
+        width: 150px;
+    }
+
+    .cor1 {
+        font-size: 95px;
+    }
+
+    .cor2 {
+        font-size: 95px;
+    }
+
+    .conteudoLivros {
+        width: 349px;
+        height: 163px;
+        background-color: #878C69;
+        border-radius: 5px;
+        color: #3E4320;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .conteudoLivros img {
+        width: 109px;
+        height: 171px;
+        margin-top: -1px;
+        margin-left: -20px;
+        border-radius: 5px;
+    }
+
+    .conteudoLivros li {
+        width: 258px;
+        height: 20px;
+        flex-shrink: 0;
+        margin-bottom: 100px;
+        color: #30351B;
+        font-size: 19px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .conteudoLivros button {
+        width: 51px;
+        height: 51px;
+        background: transparent;
+        font-size: 15px;
+        border-radius: 10px;
+        border: 1px solid rgba(48, 53, 27, 0.50);
+        box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+        margin-top: 25px;
+        margin-left: 27px;
+        cursor: pointer;
+    }
+
 }
 
     @media only screen and (max-width: 410px){
@@ -3861,9 +4535,13 @@ h3 {
         }
         
         .logofixa {
-            margin-left: 97%;
+            margin-left: 0%;
             margin-top: -123%;
         }
+
+
+
+
     }
 
     @media only screen and (max-width: 390px){
@@ -3887,17 +4565,21 @@ h3 {
             justify-content: end;
         }
 
+        .titulo {
+            margin-left: 31%;
+        }
+
         .cor1 {
-            font-size: 103px;
+            font-size: 95px;
         }
 
         .cor2 {
-            font-size: 103px;
+            font-size: 95px;
         }
 
         .text-mobile {
             display: block;
-            margin-left: 172px;
+            margin-left: 189px;
             width: 370px;
             font-size: 18px;
             margin-top: -10%;
@@ -3905,7 +4587,7 @@ h3 {
 
         .botoes {
             display: flex;
-            padding-left: 179px;
+            padding-left: 194px;
             margin-top: 50px;
         }
 
@@ -3917,17 +4599,50 @@ h3 {
         margin-left: -154px;
     }
 
+    .main {
+        width: 298%;
+        margin-left: -29%;
+    }
+
+    .containerlogo {
+        margin-right: -11%;
+    }
 
      }
 
     @media only screen and (max-width: 370px){
-       .cor1{
-        font-size: 130px;
+        .logo {
+            width: 131%;
+            display: flex;
+            align-items: end;
+            justify-content: end;
+        }
+
+        .titulo {
+            margin-left: 31%;
+        }
+       
+        .cor1{
+        font-size: 95px;
        }
 
        .cor2{
-        font-size: 130px;
+        font-size: 95px;
        }
+
+       .text-mobile {
+        display: block;
+        margin-left: 154px;
+        width: 370px;
+        font-size: 18px;
+        margin-top: -10%;
+    }
+
+       .botoes {
+        display: flex;
+        padding-left: 169px;
+        margin-top: 50px;
+    }
 
        .container-home{
         margin-left: -78px;
@@ -3954,6 +4669,11 @@ h3 {
     .logofixa {
         margin-left: 115%;
         margin-top: -123%;
+    }
+
+    .main {
+        width: 316%;
+        margin-left: -29%;
     }
     
 }
