--- a/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
@@ -142,12 +142,12 @@
 
 
     <main class="main detalhes">
-        <div class="usuario detalhes">
+        <div class="usuario">
             <a href="/usuario/pagina-do-usuario"><img src="/img/user.png" alt="Foto do Usuário" /></a>
             <p id="username" th:text="${nomeUsuario}"></p>
         </div>
 
-        <div class="barradepes detalhes">
+        <div class="barradepes">
             <input type="text" id="search-txt" placeholder="Encontre o livro que você gosta..." />
             <button id="btnBuscar" type="button">
                 <img src="/img/lupa.png" alt="Lupa" />
